--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,12 @@
+
+
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
   font-family: Arial, sans-serif;
+  justify-content: center;
+  align-items: center;
 }
 
 body {
@@ -16,6 +20,10 @@ body {
 }
 
 input {
+  display: block;
+  width: 100%;
+  margin: 0 auto;
+  max-width: 95%;
   align-items: center;
   justify-content: center;
   padding: 10px 15px;
@@ -27,7 +35,8 @@ input {
 }
 
 button {
-  margin-left: 10px;
+  width: 100%;
+  margin: 10px auto; /* ini akan memusatkan button */
   padding: 10px 20px;
   border: none;
   border-radius: 5px;
